--- a/clientinterface.ui
+++ b/clientinterface.ui
@@ -329,7 +329,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="recentPostsButton">
    <property name="geometry">
     <rect>
-     <x>350</x>
+     <x>340</x>
      <y>170</y>
      <width>91</width>
      <height>22</height>
@@ -342,7 +342,7 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="go_to_ProfileButton">
    <property name="geometry">
     <rect>
-     <x>650</x>
+     <x>670</x>
      <y>170</y>
      <width>80</width>
      <height>22</height>
@@ -355,11 +355,24 @@ p, li { white-space: pre-wrap; }
   <widget class="QLineEdit" name="go_to_inputBox">
    <property name="geometry">
     <rect>
-     <x>730</x>
+     <x>750</x>
      <y>170</y>
      <width>113</width>
      <height>22</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="publicPostsButton">
+   <property name="geometry">
+    <rect>
+     <x>520</x>
+     <y>170</y>
+     <width>91</width>
+     <height>22</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Public Posts</string>
    </property>
   </widget>
  </widget>
