--- a/clientinterface.ui
+++ b/clientinterface.ui
@@ -157,6 +157,11 @@ p, li { white-space: pre-wrap; }
    </property>
    <item>
     <property name="text">
+     <string>Public</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
      <string>Acquaintance</string>
     </property>
    </item>
